--- a/mdxy.css
+++ b/mdxy.css
@@ -58,8 +58,11 @@ h1,h2,h3,h4,h5,h6{border:0;}
 h1{font-size:170%;border-top:4px solid #aaa;padding-top:.5em;margin-top:1.5em;}
 h1:first-child{margin-top:0;padding-top:.25em;border-top:none;}
 h2{font-size:150%;margin-top:1.5em;border-top:4px solid #e0e0e0;padding-top:.5em;}
-h3{margin-top:1em;}
-hr{border:1px solid #ddd;}
+h3{font-size:120%;margin-top:1.2em;}
+h4{font-size:110%;margin-top:1em;}
+h5{font-size:100%;margin-top:0.7em;}
+h6{font-size:80%;margin-top:0.4em;}
+hr{border:1px solid #ddd; margin-top:2em;}
 ul{margin:1em 0 1em 2em;}
 ol{margin:1em 0 1em 2em;}
 ul li,ol li{margin-top:.5em;margin-bottom:.5em;}
