--- a/mdxy.css
+++ b/mdxy.css
@@ -1,6 +1,6 @@
 *{margin:0;padding:0;}
 body {
-	 font:13.34px 微软雅黑,helvetica,arial,freesans,clean,sans-serif;
+	 font:13.34px 微软雅黑,courier new,helvetica,arial,freesans,clean,sans-serif;
 	 color:black;
 	 line-height:1.4em;
 	 background-color: #F8F8F8;
